--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@ function MM_swapImage() { //v3.0
 }
 </script>
 <link href="SpryAssets/SpryTabbedPanels.css" rel="stylesheet" type="text/css" />
+<style type="text/css">
+body {
+	background-color: #0F9;
+}
+</style>
 </head>
 
 <body onload="MM_preloadImages('tp/微信图片_20200320110931.jpg','tp/微信图片_20200320110945.jpg')">
@@ -36,7 +41,7 @@ function MM_swapImage() { //v3.0
     <td align="left"><a href="Untitled-1.html" target="fudong" onmouseover="MM_swapImage('国内疫情','','tp/微信图片_20200320110931.jpg',1)" onmouseout="MM_swapImgRestore()"><img src="tp/微信图片_20200320110949.jpg" name="国内疫情" width="100" height="60" id="国内疫情" /></a><a href="Untitled-2.html" target="fudong" onmouseover="MM_swapImage('国外疫情','','tp/微信图片_20200320110945.jpg',1)" onmouseout="MM_swapImgRestore()"><img src="tp/微信图片_20200320110954.jpg" name="国外疫情" width="100" height="60" id="国外疫情" /></a></td>
   </tr>
   <tr>
-    <td align="left"><iframe name="fudong" width="750" height="350" id="fudong"></iframe>    &nbsp;</td>
+    <td align="left" bgcolor="#00CCFF"><iframe name="fudong" width="750" height="350" id="fudong"></iframe>    &nbsp;</td>
   </tr>
 </table>
 <table width="1000" border="0">
