--- a/index.html
+++ b/index.html
@@ -37,9 +37,58 @@ body {
 </head>
 
 <body onload="MM_preloadImages('tp/微信图片_20200320110931.jpg','tp/微信图片_20200320110945.jpg')">
-<table width="1000" border="0" align="left">
+<table width="1000" border="0" align="center">
   <tr>
-    <td align="left"><a href="Untitled-1.html" target="fudong" onmouseover="MM_swapImage('国内疫情','','tp/微信图片_20200320110931.jpg',1)" onmouseout="MM_swapImgRestore()"><img src="tp/微信图片_20200320110949.jpg" name="国内疫情" width="100" height="60" id="国内疫情" /></a><a href="Untitled-2.html" target="fudong" onmouseover="MM_swapImage('国外疫情','','tp/微信图片_20200320110945.jpg',1)" onmouseout="MM_swapImgRestore()"><img src="tp/微信图片_20200320110954.jpg" name="国外疫情" width="100" height="60" id="国外疫情" />
+    <td align="center" bgcolor="#00FFFF"><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="149" height="26" id="FlashID3" title="5">
+      <param name="movie" value="tp/5.swf" />
+      <param name="quality" value="high" />
+      <param name="wmode" value="opaque" />
+      <param name="swfversion" value="8.0.35.0" />
+      <!-- 此 param 标签提示使用 Flash Player 6.0 r65 和更高版本的用户下载最新版本的 Flash Player。如果您不想让用户看到该提示，请将其删除。 -->
+      <param name="expressinstall" value="Scripts/expressInstall.swf" />
+      <!-- 下一个对象标签用于非 IE 浏览器。所以使用 IECC 将其从 IE 隐藏。 -->
+      <!--[if !IE]>-->
+      <object type="application/x-shockwave-flash" data="tp/5.swf" width="149" height="26">
+        <!--<![endif]-->
+        <param name="quality" value="high" />
+        <param name="wmode" value="opaque" />
+        <param name="swfversion" value="8.0.35.0" />
+        <param name="expressinstall" value="Scripts/expressInstall.swf" />
+        <!-- 浏览器将以下替代内容显示给使用 Flash Player 6.0 和更低版本的用户。 -->
+        <div>
+          <h4>此页面上的内容需要较新版本的 Adobe Flash Player。</h4>
+          <p><a href="http://www.adobe.com/go/getflashplayer"><img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="获取 Adobe Flash Player" width="112" height="33" onclick="window.open('https://www.ixigua.com/i6791818885214503435/?fromvsogou=1&utm_source=sogou_duanshipin&utm_medium=sogou_referral&utm_campaign=cooperation')"/></a></p>
+        </div>
+        <!--[if !IE]>-->
+      </object>
+      <!--<![endif]-->
+    </object>
+      <br />
+      <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="263" height="34" id="FlashID2" title="4">
+      <param name="movie" value="tp/4.swf" />
+      <param name="quality" value="high" />
+      <param name="wmode" value="opaque" />
+      <param name="swfversion" value="8.0.35.0" />
+      <!-- 此 param 标签提示使用 Flash Player 6.0 r65 和更高版本的用户下载最新版本的 Flash Player。如果您不想让用户看到该提示，请将其删除。 -->
+      <param name="expressinstall" value="Scripts/expressInstall.swf" />
+      <!-- 下一个对象标签用于非 IE 浏览器。所以使用 IECC 将其从 IE 隐藏。 -->
+      <!--[if !IE]>-->
+      <object type="application/x-shockwave-flash" data="tp/4.swf" width="263" height="34">
+        <!--<![endif]-->
+        <param name="quality" value="high" />
+        <param name="wmode" value="opaque" />
+        <param name="swfversion" value="8.0.35.0" />
+        <param name="expressinstall" value="Scripts/expressInstall.swf" />
+        <!-- 浏览器将以下替代内容显示给使用 Flash Player 6.0 和更低版本的用户。 -->
+        <div>
+          <h4>此页面上的内容需要较新版本的 Adobe Flash Player。</h4>
+          <p><a href="http://www.adobe.com/go/getflashplayer"><img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="获取 Adobe Flash Player" width="112" height="33" onclick="window.open('https://www.ixigua.com/i6809801054754963976/?fromvsogou=1&utm_source=sogou_duanshipin&utm_medium=sogou_referral&utm_campaign=cooperation')"/></a></p>
+        </div>
+        <!--[if !IE]>-->
+      </object>
+      <!--<![endif]-->
+    </object>
+      <br />
       <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="85" height="31" id="FlashID" title="2">
         <param name="movie" value="tp/2.swf" />
         <param name="quality" value="high" />
@@ -58,12 +107,13 @@ body {
           <!-- 浏览器将以下替代内容显示给使用 Flash Player 6.0 和更低版本的用户。 -->
           <div>
             <h4>此页面上的内容需要较新版本的 Adobe Flash Player。</h4>
-            <p><a href="http://www.adobe.com/go/getflashplayer"><img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="获取 Adobe Flash Player" width="112" height="33" onclick="window.open('http://ddm123.xyz')"/></a></p>
+            <p><a href="http://www.adobe.com/go/getflashplayer"><img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="获取 Adobe Flash Player" width="112" height="33" onclick="window.open('https://www.ixigua.com/i6809801054754963976/?fromvsogou=1&utm_source=sogou_duanshipin&utm_medium=sogou_referral&utm_campaign=cooperation')"/></a></p>
           </div>
           <!--[if !IE]>-->
         </object>
         <!--<![endif]-->
       </object>
+      <br />
       <object id="疫情防护" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="142" height="38">
         <param name="movie" value="tp/1.swf" />
         <param name="quality" value="high" />
@@ -88,13 +138,19 @@ body {
         </object>
         <!--<![endif]-->
       </object>
-    </a></td>
+    <br /></td>
+  </tr>
+</table>
+<br />
+<table width="1000" border="0" align="center">
+  <tr>
+    <td align="left"><a href="Untitled-1.html" target="fudong" onmouseover="MM_swapImage('国内疫情','','tp/微信图片_20200320110931.jpg',1)" onmouseout="MM_swapImgRestore()"><img src="tp/微信图片_20200320110949.jpg" name="国内疫情" width="100" height="60" id="国内疫情" /></a><a href="Untitled-2.html" target="fudong" onmouseover="MM_swapImage('国外疫情','','tp/微信图片_20200320110945.jpg',1)" onmouseout="MM_swapImgRestore()"><img src="tp/微信图片_20200320110954.jpg" name="国外疫情" width="100" height="60" id="国外疫情" /></td>
   </tr>
   <tr>
     <td align="left" bgcolor="#00CCFF"><iframe name="fudong" width="750" height="350" id="fudong"></iframe>    &nbsp;</td>
   </tr>
 </table>
-<table width="1000" border="0">
+<table width="1000" border="0" align="center">
   <tr>
     <td><div id="TabbedPanels1" class="TabbedPanels">
       <ul class="TabbedPanelsTabGroup">
@@ -122,6 +178,8 @@ body {
 <script type="text/javascript">
 var TabbedPanels1 = new Spry.Widget.TabbedPanels("TabbedPanels1");
 swfobject.registerObject("FlashID");
+swfobject.registerObject("FlashID2");
+swfobject.registerObject("FlashID3");
 </script>
 </body>
 </html>
